# notes-sycamore

./: Cargo.toml  README.md  index.html  main.scss
src/: main.rs  routes.rs
src/components/: mod.rs  notebook.rs  notebooks.rs
src/js_bindings/: notebook_service.rs
src/js_service/: notebook_service.js
src/models/: mod.rs  note_model.rs  notebook_model.rs
src/services/: mod.rs  notebook_service.rs
